--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,4 +26,6 @@ jobs:
         run: dotnet pack --configuration Release SampleLibrary/SampleLibrary.csproj -o ./artifacts
 
       - name: Push to JFrog NuGet Repo
-        run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.JFROG_API_KEY }} --source "https://<your-subdomain>.jfrog.io/artifactory/api/nuget/<your-nuget-repo-name>"
+        run: dotnet nuget push ./artifacts/*.nupkg \
+          --api-key ${{ secrets.JFROG_PASSWORD }} \
+          --source "https://trial2q08ul.jfrog.io/artifactory/api/nuget/test-nuget"
