--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish NuGet to JFrog
 
 on:
-  workflow_dispatch:   # allows manual trigger from Actions tab
+  workflow_dispatch:   # manual trigger
 
 jobs:
   build-and-publish:
@@ -20,15 +20,15 @@ jobs:
 
       # Restore dependencies
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore SampleLibrary/SampleLibrary.csproj
 
       # Build project
       - name: Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build SampleLibrary/SampleLibrary.csproj --configuration Release --no-restore
 
       # Pack project into .nupkg
       - name: Pack NuGet package
-        run: dotnet pack --configuration Release --no-build -o ./artifacts
+        run: dotnet pack SampleLibrary/SampleLibrary.csproj --configuration Release --no-build -o ./artifacts
 
       # Configure JFrog NuGet Source
       - name: Configure JFrog NuGet Source
